force-app/main/default/objects/ATP__c/ATP__c.object-meta.xml
<CustomObject>
    <description>Available to Promise(ATP) quantities will be used by the OBAMs to ensure that they not overselling and creating shortfall of products that could potentially be expensive for Shell to fulfill.</description>
    <label>ATP</label>
    <nameField>
        <displayFormat>ATP-{0000}</displayFormat>
        <label>ATP Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>