force-app/main/default/objects/ATP__c/fields/ATP2__c.field-meta.xml
<CustomField>
    <fullName>ATP2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>D(15-28)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>