force-app/main/default/objects/ATP__c/fields/ATP2_Live__c.field-meta.xml
<CustomField>
    <fullName>ATP2_Live__c</fullName>
    <label>Live(15-28)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>