force-app/main/default/objects/ATP__c/fields/ATP3__c.field-meta.xml
<CustomField>
    <fullName>ATP3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>D(29-61)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>