force-app/main/default/objects/ATP__c/fields/ATP3_Live__c.field-meta.xml
<CustomField>
    <fullName>ATP3_Live__c</fullName>
    <label>Live(29-61)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>