force-app/main/default/objects/ATP__c/fields/ATP_Auto_Refresh__c.field-meta.xml
<CustomField>
    <fullName>ATP_Auto_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used by a batch class to refresh ATP value.</description>
    <label>Batch ATP (00-14)(Tons)</label>
    <type>Checkbox</type>
</CustomField>