force-app/main/default/objects/ATP__c/fields/ATP_MIN_15_28__c.field-meta.xml
<CustomField>
    <fullName>ATP_MIN_15_28__c</fullName>
    <label>Batch ATP (15-28)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>