force-app/main/default/objects/ATP__c/fields/ATP_MIN_29_61__c.field-meta.xml
<CustomField>
    <fullName>ATP_MIN_29_61__c</fullName>
    <label>Batch ATP (29-61)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>