force-app/main/default/objects/ATP__c/fields/ATP_Refresh__c.field-meta.xml
<CustomField>
    <fullName>ATP_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox to refresh the value of Live(00-14)(Tons)</description>
    <label>Reset Live(00-14)(Tons)</label>
    <type>Checkbox</type>
</CustomField>