force-app/main/default/objects/ATP__c/fields/Batch1__c.field-meta.xml
<CustomField>
    <fullName>Batch1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch ATP (15-28)</label>
    <type>Checkbox</type>
</CustomField>