force-app/main/default/objects/ATP__c/fields/Batch2__c.field-meta.xml
<CustomField>
    <fullName>Batch2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch ATP (29-61)</label>
    <type>Checkbox</type>
</CustomField>