force-app/main/default/objects/ATP__c/fields/Comment_Forward2_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comment_Forward2_Sales__c</fullName>
    <label>Comment Forward2 Sales</label>
    <type>TextArea</type>
</CustomField>