force-app/main/default/objects/ATP__c/fields/Comment_Prompt_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comment_Prompt_Sales__c</fullName>
    <label>Comment Prompt Sales</label>
    <type>TextArea</type>
</CustomField>