force-app/main/default/objects/ATP__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <formula>TEXT( Location__r.Company_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Code</label>
    <type>Text</type>
</CustomField>