force-app/main/default/objects/ATP__c/fields/Grade_Level2__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level2__c</fullName>
    <label>Product Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>IGO Austria</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
            <value>
                <fullName>AGO-B7</fullName>
                <isActive>false</isActive>
                <label>AGO-B7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>