force-app/main/default/objects/ATP__c/fields/IsChanged__c.field-meta.xml
<CustomField>
    <fullName>IsChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChanged</label>
    <type>Checkbox</type>
</CustomField>