force-app/main/default/objects/ATP__c/fields/Lifting_Validity_From1__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Validity_From1__c</fullName>
    <label>Lifting Day1</label>
    <type>Date</type>
</CustomField>