force-app/main/default/objects/ATP__c/fields/Lifting_Validity_From2__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Validity_From2__c</fullName>
    <label>Lifting Day2</label>
    <type>Date</type>
</CustomField>