force-app/main/default/objects/ATP__c/fields/Lifting_Validity_From3__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Validity_From3__c</fullName>
    <label>Lifting Day3</label>
    <type>Date</type>
</CustomField>