force-app/main/default/objects/ATP__c/fields/Lifting_Window__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Window__c</fullName>
    <label>Lifting Window</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>