force-app/main/default/objects/ATP__c/fields/Live_Online_ATP2__c.field-meta.xml
<CustomField>
    <fullName>Live_Online_ATP2__c</fullName>
    <label>Live Online (Tranche 2) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>