force-app/main/default/objects/ATP__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Name</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>ATP</relationshipLabel>
    <relationshipName>ATP</relationshipName>
    <type>Lookup</type>
</CustomField>