force-app/main/default/objects/ATP__c/fields/LocType__c.field-meta.xml
<CustomField>
    <fullName>LocType__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LocType</label>
    <type>Text</type>
</CustomField>