force-app/main/default/objects/ATP__c/fields/Max_Online_Volume_ATP2__c.field-meta.xml
<CustomField>
    <fullName>Max_Online_Volume_ATP2__c</fullName>
    <label>Max Online Volume (Tranche 2) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>