force-app/main/default/objects/ATP__c/fields/Min_ATP1__c.field-meta.xml
<CustomField>
    <fullName>Min_ATP1__c</fullName>
    <formula>Location__r.Minimum_ATP1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refresh ATP1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>