force-app/main/default/objects/ATP__c/fields/Min_ATP3__c.field-meta.xml
<CustomField>
    <fullName>Min_ATP3__c</fullName>
    <formula>Location__r.Minimum_ATP3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min ATP3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>