force-app/main/default/objects/ATP__c/fields/Min_Daily_Split_Vol_ATP2__c.field-meta.xml
<CustomField>
    <fullName>Min_Daily_Split_Vol_ATP2__c</fullName>
    <label>Min Daily Volume (Tranche 2) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>