force-app/main/default/objects/ATP__c/fields/Min_Online_Volume_ATP3__c.field-meta.xml
<CustomField>
    <fullName>Min_Online_Volume_ATP3__c</fullName>
    <label>Min Online Volume (Tranche 3) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>