force-app/main/default/objects/ATP__c/fields/Minimum_ATP1__c.field-meta.xml
<CustomField>
    <fullName>Minimum_ATP1__c</fullName>
    <label>Batch ATP (00-14)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>