force-app/main/default/objects/ATP__c/fields/Minimum_Online_Volume__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Online_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Min Online Volume (Tranche 1) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>