force-app/main/default/objects/ATP__c/fields/Mode_of_Transport_MOT__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport_MOT__c</fullName>
    <label>Mode of Transport(MOT)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck</fullName>
                <default>true</default>
                <label>Truck</label>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>