force-app/main/default/objects/ATP__c/fields/Product_Level3__c.field-meta.xml
<CustomField>
    <fullName>Product_Level3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product (Level3)</label>
    <referenceTo>Product_Catalogue__c</referenceTo>
    <relationshipLabel>ATP</relationshipLabel>
    <relationshipName>ATP</relationshipName>
    <type>Lookup</type>
</CustomField>