force-app/main/default/objects/ATP__c/fields/Refresh_ATP__c.field-meta.xml
<CustomField>
    <fullName>Refresh_ATP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be used by the user to refresh the ATP1  value from Refresh ATP1 to ATP1.</description>
    <label>Refresh ATP</label>
    <type>Checkbox</type>
</CustomField>