force-app/main/default/objects/ATP__c/fields/Reset_2__c.field-meta.xml
<CustomField>
    <fullName>Reset_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is field is used to reset Live(15-28)(Tons) value</description>
    <label>Reset Live(15-28)(Tons)</label>
    <type>Checkbox</type>
</CustomField>