force-app/main/default/objects/ATP__c/fields/Reset_3__c.field-meta.xml
<CustomField>
    <fullName>Reset_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reset Live(29-61)(Tons) values</description>
    <label>Reset Live(29-61)(Tons)</label>
    <type>Checkbox</type>
</CustomField>