force-app/main/default/objects/ATP__c/fields/Sales_15_28__c.field-meta.xml
<CustomField>
    <fullName>Sales_15_28__c</fullName>
    <label>Sales(15-28)(Tons)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>