force-app/main/default/objects/ATP__c/fields/Sales_29_61__c.field-meta.xml
<CustomField>
    <fullName>Sales_29_61__c</fullName>
    <label>Sales(29-61)(Tons)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>