force-app/main/default/objects/ATP__c/fields/Sales_8_30_17_30__c.field-meta.xml
<CustomField>
    <fullName>Sales_8_30_17_30__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sales(00-14)(Tons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>