force-app/main/default/objects/ATP__c/fields/Sales_D_00_14__c.field-meta.xml
<CustomField>
    <fullName>Sales_D_00_14__c</fullName>
    <formula>Sales_8_30_17_30__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales D(00-14)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>