force-app/main/default/objects/ATP__c/fields/Sales_D_15_28__c.field-meta.xml
<CustomField>
    <fullName>Sales_D_15_28__c</fullName>
    <formula>Sales_15_28__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales D(15-28)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>