force-app/main/default/objects/ATP__c/fields/Sales_D_29_61__c.field-meta.xml
<CustomField>
    <fullName>Sales_D_29_61__c</fullName>
    <formula>Sales_29_61__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales D(29-61)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>