force-app/main/default/objects/ATP__c/fields/Split_Volume__c.field-meta.xml
<CustomField>
    <fullName>Split_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Online Volume % (Tranche 1) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>