force-app/main/default/objects/ATP__c/fields/Split_Volume_Per_ATP3__c.field-meta.xml
<CustomField>
    <fullName>Split_Volume_Per_ATP3__c</fullName>
    <label>Online Volume % (Tranche 3) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>