force-app/main/default/objects/ATP__c/fields/testdelete__c.field-meta.xml
<CustomField>
    <fullName>testdelete__c</fullName>
    <label>testdelete</label>
    <length>100</length>
    <type>Text</type>
</CustomField>