force-app/main/default/objects/ATP__c/fields/Tranche_View__c.field-meta.xml
<CustomField>
    <fullName>Tranche_View__c</fullName>
    <label>Tranche View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branded</fullName>
            </value>
            <value>
                <fullName>Large Independent</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Non Obam Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>