force-app/main/default/objects/ATP__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <formula>Plant_Code__c+ &apos;-&apos; +  TEXT(Grade_Level2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueKey</label>
    <type>Text</type>
</CustomField>