force-app/main/default/objects/ATP__c/fields/Vol_Cap_Customer_ATP3__c.field-meta.xml
<CustomField>
    <fullName>Vol_Cap_Customer_ATP3__c</fullName>
    <label>Volume Cap/Customer (Tranche3) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>