force-app/main/default/objects/ATP__c/fields/Volume_Cap_Customer__c.field-meta.xml
<CustomField>
    <fullName>Volume_Cap_Customer__c</fullName>
    <label>Volume Cap/Customer (Tranche1) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>