force-app/main/default/objects/ATP__c/validationRules/Contract_Start_Date_cant_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Start_Date_cant_be_in_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()  &amp;&amp; Contract_Start__c  &lt;=  TODAY()</errorConditionFormula>
    <errorDisplayField>Contract_Start__c</errorDisplayField>
    <errorMessage>Contract Start Date can&apos;t be in the past. Please enter future Date</errorMessage>
</ValidationRule>