force-app/main/default/objects/ATP__c/listViews/ADMIN_Online_ATP2_In_Tons.listView-meta.xml
<ListView>
    <fullName>ADMIN_Online_ATP2_In_Tons</fullName>
    <columns>NAME</columns>
    <columns>Plant_Code__c</columns>
    <columns>Location__c</columns>
    <columns>Company_Code__c</columns>
    <columns>Grade_Level2__c</columns>
    <columns>ATP2__c</columns>
    <columns>ATP2_Live__c</columns>
    <columns>Min_Daily_Split_Vol_ATP2__c</columns>
    <columns>Split_Volume_Per_ATP2__c</columns>
    <columns>Min_Online_Volume_ATP2__c</columns>
    <columns>Max_Online_Volume_ATP2__c</columns>
    <columns>Live_Online_ATP2__c</columns>
    <columns>Vol_Cap_Customer_ATP2__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>ADMIN - Online ATP D(15-28) In Tons</label>
</ListView>