force-app/main/default/objects/ATP__c/listViews/ADMIN_Online_ATP_D_00_14_In_Tons.listView-meta.xml
<ListView>
    <fullName>ADMIN_Online_ATP_D_00_14_In_Tons</fullName>
    <columns>ATP_Auto_Refresh__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Location__c</columns>
    <columns>Grade_Level2__c</columns>
    <columns>ATP1__c</columns>
    <columns>Minimum_Daily_Split_Volume__c</columns>
    <columns>Split_Volume__c</columns>
    <columns>Minimum_Online_Volume__c</columns>
    <columns>Maximum_Online_Volume__c</columns>
    <columns>Live_Online_00_14__c</columns>
    <columns>Volume_Cap_Customer__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>ADMIN - Online ATP D(00-14) In Tons</label>
</ListView>