force-app/main/default/objects/ATP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>ATP_Auto_Refresh__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Location__c</columns>
    <columns>Grade_Level2__c</columns>
    <columns>ATP1__c</columns>
    <columns>ATP_Live__c</columns>
    <columns>Sales_8_30_17_30__c</columns>
    <columns>Minimum_ATP1__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lifting_Validity_From1__c</columns>
    <columns>Comment_Prompt_Sales__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>ATP D(00-14) In Tons</label>
</ListView>