force-app/main/default/objects/ATP__c/listViews/ATP_D_14_27.listView-meta.xml
<ListView>
    <fullName>ATP_D_14_27</fullName>
    <columns>NAME</columns>
    <columns>Batch1__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Location__c</columns>
    <columns>Grade_Level2__c</columns>
    <columns>ATP2__c</columns>
    <columns>ATP2_Live__c</columns>
    <columns>Sales_15_28__c</columns>
    <columns>ATP_MIN_15_28__c</columns>
    <columns>Lifting_Validity_From2__c</columns>
    <columns>Comment_Forward_Sales__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>ATP D(15-28) In Tons</label>
</ListView>