force-app/main/default/objects/ATP__c/listViews/ATP_D_28_60.listView-meta.xml
<ListView>
    <fullName>ATP_D_28_60</fullName>
    <columns>Batch2__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Location__c</columns>
    <columns>Grade_Level2__c</columns>
    <columns>ATP3__c</columns>
    <columns>ATP3_Live__c</columns>
    <columns>Sales_29_61__c</columns>
    <columns>ATP_MIN_29_61__c</columns>
    <columns>Lifting_Validity_From3__c</columns>
    <columns>Comment_Forward_Sales__c</columns>
    <filterScope>Everything</filterScope>
    <label>ATP D(29-61) In Tons</label>
</ListView>